--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,8 @@
 <h1>Hello World!!!</h1>
 <h1>I am {{ memberName }}</h1>
+<input type="text" [(ngModel)]="language"/>
+<button (click)="addLanguage()">Add</button>
+<h2>List of language:</h2>
+<ul>
+  <li *ngFor="let language of listOfLanguage">{{language}}</li>
+</ul>
